# policyproof

./: .gitignore  README.md  pyproject.toml
data/: corpus_snapshot.json  extraction_snapshot.json  heading_hierarchy_snapshot.json  heading_reconstruction_snapshot.json  heading_snapshot.json  source_manifest.json
docs/: architecture.md  engineering-decisions.md  evaluation-methodology.md  evidence-sufficiency-annotation-guide-v0.1.0.md  evidence-sufficiency-research-protocol.md  experiment-results.md  failure-analysis.md  research-notes.md
scripts/: compare_extractors.py  compare_pypdf_modes.py
tests/: test_bm25.py  test_bm25_baseline.py  test_bm25_evaluation.py  test_bm25_repository_result.py  test_bm25_results.py  test_corpus_download.py  test_corpus_manifest.py  test_dense.py  test_dense_baseline.py  test_dense_evaluation.py  test_dense_model.py  test_dense_repository_result.py  test_dense_results.py  test_evidence_sufficiency_adjudication.py  test_evidence_sufficiency_annotation_agreement.py  test_evidence_sufficiency_annotation_comparison.py  test_evidence_sufficiency_annotation_metadata.py  test_evidence_sufficiency_annotation_records.py  test_evidence_sufficiency_annotation_writer.py  test_evidence_sufficiency_annotations.py  test_evidence_sufficiency_evaluation.py  test_evidence_sufficiency_splits.py  test_evidence_sufficiency_structure_disagreement.py  test_heading_detection.py  test_heading_hierarchy.py  test_heading_reconstruction.py  test_heading_spans.py  test_hybrid_candidate_baseline.py  test_hybrid_candidate_evaluation.py  test_hybrid_candidate_results.py  (+17 more)
(+49 files in other folders)
