[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "policyproof"
version = "0.1.0"
description = "Research-driven RAG and citation verification for public AI governance documents."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pdfplumber==0.11.10",
    "pypdf==6.14.2",
    "tokenizers==0.22.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.9",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["policyproof"]

[tool.setuptools.package-data]
policyproof = ["assets/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib", "-ra"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
